Изучаем html,CSS. Повторяем основы pyton.

--- a/html_css/project_lending_guitar/src/sass/normalizes.scss
+++ b/html_css/project_lending_guitar/src/sass/normalizes.scss
@@ -1,4 +1,4 @@
-/*! normalizes.scss v8.0.1 | MIT License | github.com/necolas/normalizes.scss */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
    ========================================================================== */
